microservices/media/deployment/prod/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: media
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker.pkg.github.com/alexandr-io/backend/media:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /media

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media-data

      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: media
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
