microservices/media/deployment/prod/app/Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: media
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`media.alexandrio.cloud`)
      kind: Rule
      services:
        - name: api
          port: 80
  tls:
    certResolver: myresolver
